# password_generator_IA

./: .editorconfig  .gitignore  Demo.md  GUIA_DE_EXECUCAO.md  README.md  cli.mjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
src/pwgen/: __init__.py  cli.py  core.py  policy.py
test/: cli.test.mjs  password.test.mjs
tests/: test_cli.py  test_core.py  test_policy.py
web/: app.js  app.mjs  index.html  password.mjs  styles.css
